--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <title>TubeAlert</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/app.css" />
 </head>
 <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
